@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 3.1.26 May 15, 2017
+
+* restore support for Rails 5.0 for learn-rails application
+
 h3. 3.1.25 May 15, 2017
 
 * add jQuery option via gem or yarn (because Rails 5.1 drops jQuery and Bootstrap needs it)
